# spark-playground

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
container/clickhouse/: s3_storage.xml
container/hive-metastore/: Dockerfile
container/hive-metastore/conf/: entrypoint.sh  hive-site.xml
container/spark/: Dockerfile  Dockerfile_old  requirements.txt  spark-defaults.conf
container/spark/conf/: hive-site.xml  hms-3.0.0-deps.txt  spark-defaults.conf
container/starrocks/: Dockerfile
container/starrocks/fe_conf/: fe.conf
workspaces/Hw4/: Hw2_functions.py  Hw4_refactor.py  README.md  ddl.py  pipeline.py  table_manager.py
workspaces/notebooks/: Hw1.ipynb  Hw2.ipynb  Hw4.ipynb
workspaces/scripts/: README.md  ddl.py  logcontent.sql  pipeline.py  starrocks_query.sql  table_schema.py
