[tool.poetry]
name = "spark-playground"
version = "0.1.0"
description = "Spark Playground"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
pandas = "^2.1.1"
pyarrow = ">=13.0.0"
pyspark = "3.4.1"
jupyter = "^1.0.0"
delta-spark = "2.4.0"
numpy = "^1.26.1"
python-dotenv = "^1.0.0"
faker = "^19.10.0"
pytest = "^7.4.2"
sqlalchemy = "^2.0.22"
chardet = "^5.2.0"
memory-profiler = "^0.61.0"
ruff = "^0.1.3"
pandera = {extras = ["pyspark"], version = ">=0.17.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
